--- a/m_huanqiu/index.html
+++ b/m_huanqiu/index.html
@@ -9,21 +9,40 @@
   <meta name="x5-orientation" content="portrait">
   <link rel="shortcut icon"  href="http://himg2.huanqiu.com/statics/images/favicon1.ico"/>
   <link rel="stylesheet" type="text/css" href="dist/css/index.css">
-  <script type="text/javascript">
-    !function(a,b){function c(){var b=f.getBoundingClientRect().width;b/i>540&&(b=540*i);var c=b/10;f.style.fontSize=c+"px",k.rem=a.rem=c}var d,e=a.document,f=e.documentElement,g=e.querySelector('meta[name="viewport"]'),h=e.querySelector('meta[name="flexible"]'),i=0,j=0,k=b.flexible||(b.flexible={});if(g){console.warn("将根据已有的meta标签来设置缩放比例");var l=g.getAttribute("content").match(/initial\-scale=([\d\.]+)/);l&&(j=parseFloat(l[1]),i=parseInt(1/j))}else if(h){var m=h.getAttribute("content");if(m){var n=m.match(/initial\-dpr=([\d\.]+)/),o=m.match(/maximum\-dpr=([\d\.]+)/);n&&(i=parseFloat(n[1]),j=parseFloat((1/i).toFixed(2))),o&&(i=parseFloat(o[1]),j=parseFloat((1/i).toFixed(2)))}}if(!i&&!j){var p=a.navigator.userAgent,q=(!!p.match(/android/gi),!!p.match(/iphone/gi)),r=q&&!!p.match(/OS 9_3/),s=a.devicePixelRatio;i=q&&!r?s>=3&&(!i||i>=3)?3:s>=2&&(!i||i>=2)?2:1:1,j=1/i}if(f.setAttribute("data-dpr",i),!g)if(g=e.createElement("meta"),g.setAttribute("name","viewport"),g.setAttribute("content","initial-scale="+j+", maximum-scale="+j+", minimum-scale="+j+", user-scalable=no"),f.firstElementChild)f.firstElementChild.appendChild(g);else{var t=e.createElement("div");t.appendChild(g),e.write(t.innerHTML)}a.addEventListener("resize",function(){clearTimeout(d),d=setTimeout(c,300)},!1),a.addEventListener("pageshow",function(a){a.persisted&&(clearTimeout(d),d=setTimeout(c,300))},!1),"complete"===e.readyState?e.body.style.fontSize=12*i+"px":e.addEventListener("DOMContentLoaded",function(){e.body.style.fontSize=12*i+"px"},!1),c(),k.dpr=a.dpr=i,k.refreshRem=c,k.rem2px=function(a){var b=parseFloat(a)*this.rem;return"string"==typeof a&&a.match(/rem$/)&&(b+="px"),b},k.px2rem=function(a){var b=parseFloat(a)/this.rem;return"string"==typeof a&&a.match(/px$/)&&(b+="rem"),b}}(window,window.lib||(window.lib={}));
-  </script>
+  <script type="text/javascript" src="http://himg2.huanqiu.com/statics/www/hq_m/dist/m_huanqiu/libs/flexble.js"></script>
   <!-- 广告加载基础代码 -->
-  <script type="text/javascript" src="http://ipengtai.huanqiu.com/resource/js/base_mobile.js"></script>
+  <script type="text/javascript" src="http://ipengtai.huanqiu.com/resource/js/base_mobile2.js"></script>
   <!-- /广告加载基础代码 -->
 </head>
 <body>
+
+  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="width: 0; height: 0; visibility: hidden; position: absolute; z-index: -1;">
+    <symbol id="user-icon" viewBox="0 0 32 32">
+      <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+        <g transform="translate(-581.000000, -139.000000)">
+          <g transform="translate(581.000000, 139.000000)">
+            <path d="M6.21873171,26.7251122 C8.89529756,29.1619122 12.3639415,30.5038049 15.9843902,30.5038049 C19.6040585,30.5038049 23.0742634,29.1603122 25.7532488,26.7226927 L25.9218732,26.5700683 L25.8419512,26.3566439 C24.3226537,22.2343024 20.3608976,19.4657951 15.9843902,19.4657951 C11.6094439,19.4657951 7.64854634,22.2359024 6.12760976,26.3582439 L6.05010732,26.5708488 L6.21873171,26.7251122 Z M15.9843902,31.9687805 C7.17061463,31.9687805 0,24.7981659 0,15.9843902 C0,7.17061463 7.17061463,0 15.9843902,0 C24.7981659,0 31.9687805,7.17061463 31.9687805,15.9843902 C31.9687805,24.7981659 24.7981659,31.9687805 15.9843902,31.9687805 L15.9843902,31.9687805 Z" fill="#D2D2D2"></path>
+            <path d="M15.863479,7 C12.629942,7 10,9.63095477 10,12.8644917 C10,16.0969653 12.6310054,18.7269073 15.863479,18.7269073 C19.0959525,18.7269073 21.7279707,16.0969653 21.7279707,12.8644917 C21.726958,9.63095477 19.0959525,7 15.863479,7" fill="#FFFFFF"></path>
+          </g>
+        </g>
+      </g>
+    </symbol>
+    <symbol id="video-icon" viewBox="0 0 1024 1024">
+      <path d="M393.441279 74.78424c127.59605-30.905894 269.732258-10.556427 376.977817 68.236104 162.337295 110.00337 229.346455 332.312548 164.324556 515.751441-39.924291 116.734678-130.198318 214.808344-243.570411 263.612886-192.022385 86.599334-440.164928 18.818601-554.761919-159.726841C60.673359 653.879358 42.924113 511.131213 77.033979 384.445906 118.809431 234.967476 243.193323 113.795742 393.441279 74.78424zM498.089687 102.783944c-196.909695 3.667529-374.693798 166.913521-392.906601 363.211279C75.809081 681.109536 249.783415 895.767454 465.502501 914.585031c219.2454 30.136368 436.652941-151.166885 449.502597-371.481639C940.718737 310.703391 730.79668 91.308589 498.089687 102.783944z" p-id="11843" fill="#fff"></path>
+      <path d="M387.315768 297.392224c117.958552 69.924559 235.935524 139.840932 351.593683 213.126029C623.997282 583.191412 505.588475 650.202619 390.991484 723.339336 382.280078 581.659523 389.303029 439.375959 387.315768 297.392224z" p-id="11844" fill="#fff"></path>
+    </symbol>
+    <symbol id="tip-close-icon" viewBox="0 0 1024 1024">
+      <path d="M512 512m-505.429418 0a10 10 0 1 0 1010.858835 0 10 10 0 1 0-1010.858835 0Z" p-id="22024" fill="#b3b3b3"></path>
+      <path d="M809.984 273.9712 572.0064 512l237.9776 237.9776-60.0064 60.0064L512 572.0064 274.0224 809.984 214.016 749.9776 451.9936 512 214.016 273.9712l60.0064-60.0064L512 451.9936l237.9776-237.9776L809.984 273.9712z" p-id="21032" fill="#000"></path>
+    </symbol>
+  </svg>
 
   <!-- header -->
   <header>
       <a href="" class="header-logo"></a>
       <a href="" class="header-user">
         <svg>
-          <use xlink:href="dist/images/icon.svg#user-icon" />
+          <use xlink:href="#user-icon" />
         </svg>
       </a>
       <span class="header-small">电脑版</span>
@@ -35,65 +54,65 @@
     <div class="nav-scroll">
       <div class="nav-main">
         <ul class="nav-main-bar">
-          <li class="nav-item active"><a href="?channel=" >首页</a></li>
-          <li class="nav-item"><a href="?channel=world" >国际</a></li>
-          <li class="nav-item"><a href="?channel=inland" >国内</a></li>
-          <li class="nav-item"><a href="?channel=null" >社会</a></li>
-          <li class="nav-item"><a href="?channel=mil" >军事</a></li>
-          <li class="nav-item"><a href="?channel=taihai" >台海</a></li>
-          <li class="nav-item"><a href="?channel=comment" >评论</a></li>
-          <li class="nav-item small"><a href="?channel=null" >海外看中国</a></li>
-          <li class="nav-item small"><a href="?channel=null" >第一话题</a></li>
-          <li class="nav-item"><a href="?channel=null" >博览</a></li>
-          <li class="nav-item"><a href="?channel=picture" >图片</a></li>
-          <li class="nav-item"><a href="?channel=video" >视频</a></li>
-          <li class="nav-item"><a href="?channel=finance" >财经</a></li>
-          <li class="nav-item"><a href="?channel=auto" >汽车</a></li>
-          <li class="nav-item"><a href="?channel=tech" >科技</a></li>
-          <li class="nav-item"><a href="?channel=null" >智能</a></li>
-          <li class="nav-item"><a href="?channel=null" >无人机</a></li>
-          <li class="nav-item"><a href="?channel=null" >旅行</a></li>
-          <li class="nav-item"><a href="?channel=health" >健康</a></li>
-          <li class="nav-item"><a href="?channel=ent" >娱乐</a></li>
-          <li class="nav-item"><a href="?channel=fashion" >时尚</a></li>
-          <li class="nav-item"><a href="?channel=null" >女人</a></li>
-          <li class="nav-item"><a href="?channel=sports" >体育</a></li>
-          <li class="nav-item"><a href="?channel=null" >滑雪</a></li>
-          <li class="nav-item"><a href="?channel=null" >留学</a></li>
-          <li class="nav-item"><a href="?channel=null" >公益</a></li>
-          <li class="nav-item"><a href="?channel=null" >城市</a></li>
+          <li class="nav-item active"><a href="#channel=" >首页</a></li>
+          <li class="nav-item"><a href="#channel=world" >国际</a></li>
+          <li class="nav-item"><a href="#channel=inland" >国内</a></li>
+          <li class="nav-item"><a href="#channel=society" >社会</a></li>
+          <li class="nav-item"><a href="#channel=mil" >军事</a></li>
+          <li class="nav-item"><a href="#channel=taihai" >台海</a></li>
+          <li class="nav-item"><a href="#channel=comment" >评论</a></li>
+          <li class="nav-item small"><a href="#channel=oversea" >海外看中国</a></li>
+          <li class="nav-item small"><a href="#channel=topic" >第一话题</a></li>
+          <li class="nav-item"><a href="#channel=bolan" >博览</a></li>
+          <li class="nav-item"><a href="#channel=picture" >图片</a></li>
+          <li class="nav-item"><a href="#channel=video" >视频</a></li>
+          <li class="nav-item"><a href="#channel=finance" >财经</a></li>
+          <li class="nav-item"><a href="#channel=auto" >汽车</a></li>
+          <li class="nav-item"><a href="#channel=tech" >科技</a></li>
+          <li class="nav-item"><a href="#channel=smart" >智能</a></li>
+          <li class="nav-item"><a href="#channel=uav" >无人机</a></li>
+          <li class="nav-item"><a href="#channel=travel" >旅行</a></li>
+          <li class="nav-item"><a href="#channel=health" >健康</a></li>
+          <li class="nav-item"><a href="#channel=ent" >娱乐</a></li>
+          <li class="nav-item"><a href="#channel=fashion" >时尚</a></li>
+          <li class="nav-item"><a href="#channel=women" >女人</a></li>
+          <li class="nav-item"><a href="#channel=sports" >体育</a></li>
+          <li class="nav-item"><a href="#channel=ski" >滑雪</a></li>
+          <li class="nav-item"><a href="#channel=liuxue" >留学</a></li>
+          <li class="nav-item"><a href="#channel=hope" >公益</a></li>
+          <li class="nav-item"><a href="#channel=city" >城市</a></li>
         </ul>
       </div>
     </div>
     <div class="nav-more-btn" id="nav-more-btn">更多</div>
     <div class="nav-more" id="nav-more">
-      <a href="?channel=" class="nav-item">首页</a>
-      <a href="?channel=" class="nav-item">国际</a>
-      <a href="?channel=" class="nav-item">国内</a>
-      <a href="?channel=" class="nav-item">社会</a>
-      <a href="?channel=" class="nav-item">军事</a>
-      <a href="?channel=" class="nav-item">台海</a>
-      <a href="?channel=" class="nav-item">评论</a>
-      <a href="?channel=" class="nav-item small">海外看中国</a>
-      <a href="?channel=" class="nav-item small">第一话题</a>
-      <a href="?channel=" class="nav-item">博览</a>
-      <a href="?channel=" class="nav-item">图片</a>
-      <a href="?channel=" class="nav-item">视频</a>
-      <a href="?channel=" class="nav-item">财经</a>
-      <a href="?channel=" class="nav-item">汽车</a>
-      <a href="?channel=" class="nav-item">科技</a>
-      <a href="?channel=" class="nav-item">智能</a>
-      <a href="?channel=" class="nav-item small">无人机</a>
-      <a href="?channel=" class="nav-item">旅行</a>
-      <a href="?channel=" class="nav-item">健康</a>
-      <a href="?channel=" class="nav-item">娱乐</a>
-      <a href="?channel=" class="nav-item">时尚</a>
-      <a href="?channel=" class="nav-item">女人</a>
-      <a href="?channel=" class="nav-item">体育</a>
-      <a href="?channel=" class="nav-item">滑雪</a>
-      <a href="?channel=" class="nav-item">留学</a>
-      <a href="?channel=" class="nav-item">公益</a>
-      <a href="?channel=" class="nav-item">城市</a>
+      <a href="#channel=" class="nav-item">首页</a>
+      <a href="#channel=world" class="nav-item">国际</a>
+      <a href="#channel=inland" class="nav-item">国内</a>
+      <a href="#channel=society" class="nav-item">社会</a>
+      <a href="#channel=mil" class="nav-item">军事</a>
+      <a href="#channel=taihai" class="nav-item">台海</a>
+      <a href="#channel=comment" class="nav-item">评论</a>
+      <a href="#channel=oversea" class="nav-item small">海外看中国</a>
+      <a href="#channel=topic" class="nav-item small">第一话题</a>
+      <a href="#channel=bolan" class="nav-item">博览</a>
+      <a href="#channel=picture" class="nav-item">图片</a>
+      <a href="#channel=video" class="nav-item">视频</a>
+      <a href="#channel=finance" class="nav-item">财经</a>
+      <a href="#channel=auto" class="nav-item">汽车</a>
+      <a href="#channel=tech" class="nav-item">科技</a>
+      <a href="#channel=smart" class="nav-item">智能</a>
+      <a href="#channel=uav" class="nav-item small">无人机</a>
+      <a href="#channel=travel" class="nav-item">旅行</a>
+      <a href="#channel=health" class="nav-item">健康</a>
+      <a href="#channel=ent" class="nav-item">娱乐</a>
+      <a href="#channel=fashion" class="nav-item">时尚</a>
+      <a href="#channel=women" class="nav-item">女人</a>
+      <a href="#channel=sports" class="nav-item">体育</a>
+      <a href="#channel=ski" class="nav-item">滑雪</a>
+      <a href="#channel=liuxue" class="nav-item">留学</a>
+      <a href="#channel=hope" class="nav-item">公益</a>
+      <a href="#channel=city" class="nav-item">城市</a>
     </div>
   </nav>
   <!-- /nav -->
@@ -132,7 +151,7 @@
       <!-- <section class="live">
         <span class="live-logo">
           <svg>
-            <use xlink:href="dist/images/icon.svg#live-icon" />
+            <use xlink:href="#live-icon" />
           </svg>
         </span>
         <p class="live-item">这些年，习总书记这样谈“航天梦”</p>
@@ -164,13 +183,13 @@
                     <span class="news-date">11:26</span>
                     <div class="news-comm">
                       <svg>
-                        <use xlink:href="dist/images/icon.svg#comm-icon" />
+                        <use xlink:href="#comm-icon" />
                       </svg>
                       <span>9999</span>
                     </div>
                     <div class="news-close-btn">
                       <svg>
-                        <use xlink:href="dist/images/icon.svg#close-btn" />
+                        <use xlink:href="#close-btn" />
                       </svg>
                     </div>
                   </div>
@@ -200,13 +219,13 @@
                     <span class="news-date">11:26</span>
                     <div class="news-comm">
                       <svg>
-                        <use xlink:href="dist/images/icon.svg#comm-icon" />
+                        <use xlink:href="#comm-icon" />
                       </svg>
                       <span>9999</span>
                     </div>
                     <div class="news-close-btn">
                       <svg>
-                        <use xlink:href="dist/images/icon.svg#close-btn" />
+                        <use xlink:href="#close-btn" />
                       </svg>
                     </div>
                   </div>
@@ -235,13 +254,13 @@
                   <span class="news-date">11:26</span>
                   <div class="news-comm">
                     <svg>
-                      <use xlink:href="dist/images/icon.svg#comm-icon" />
+                      <use xlink:href="#comm-icon" />
                     </svg>
                     <span>9999</span>
                   </div>
                   <div class="news-close-btn">
                     <svg>
-                      <use xlink:href="dist/images/icon.svg#close-btn" />
+                      <use xlink:href="#close-btn" />
                     </svg>
                   </div>
                 </div>
@@ -261,7 +280,7 @@
                     <img src="dist/images/video.png" alt="">
                     <div class="video-btn">
                       <svg>
-                        <use xlink:href="dist/images/icon.svg#video-icon" />
+                        <use xlink:href="#video-icon" />
                       </svg>
                     </div>
                   </div>
@@ -272,13 +291,13 @@
                   <span class="news-date">11:26</span>
                   <div class="news-comm">
                     <svg>
-                      <use xlink:href="dist/images/icon.svg#comm-icon" />
+                      <use xlink:href="#comm-icon" />
                     </svg>
                     <span>9999</span>
                   </div>
                   <div class="news-close-btn">
                     <svg>
-                      <use xlink:href="dist/images/icon.svg#close-btn" />
+                      <use xlink:href="#close-btn" />
                     </svg>
                   </div>
                 </div>
@@ -366,7 +385,7 @@
         <!-- </div> -->
       <!-- </div> -->
       <!-- /兴趣推荐 -->
-    <!-- </div> -->
+    </div>
   </div>
   <!-- /下拉刷新 -->
 
@@ -376,7 +395,7 @@
   <div class="add-screen-tip" id="add-screen-tip">
     <div class="tip-close" id="tip-close">
       <svg>
-        <use xlink:href="dist/images/icon.svg#tip-close-icon" />
+        <use xlink:href="#tip-close-icon" />
       </svg>
     </div>
     点击下方的<img src="dist/images/safari_menu.png" alt="">，然后选择“添加到主屏幕”，可在桌面创建手机环球网快捷方式。
