--- a/m_huanqiu/index.html
+++ b/m_huanqiu/index.html
@@ -40,12 +40,12 @@
   <!-- header -->
   <header>
       <a href="" class="header-logo"></a>
-      <a href="" class="header-user">
+      <a href="" class="header-user" style="visibility: hidden;">
         <svg>
           <use xlink:href="#user-icon" />
         </svg>
       </a>
-      <span class="header-small">电脑版</span>
+      <a href="http://www.huanqiu.com"><span class="header-small">电脑版</span></a>
   </header>
   <!-- /header -->
 
@@ -116,6 +116,12 @@
     </div>
   </nav>
   <!-- /nav -->
+
+  <!-- 推荐提醒 -->
+  <div class="auto-info" id="auto-info">
+    <p>成功为您推荐20条新闻</p>
+  </div>
+  <!-- /推荐提醒 -->
 
   <!-- 下拉刷新 -->
   <div class="refresh-control" id="refresh-control">
