--- a/m_huanqiu/index.html
+++ b/m_huanqiu/index.html
@@ -7,7 +7,9 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0 user-scalable=no">
   <meta name="screen-orientation" content="portrait">
   <meta name="x5-orientation" content="portrait">
+  <meta name="apple-mobile-web-app-title" content="手机环球网">
   <link rel="shortcut icon"  href="http://himg2.huanqiu.com/statics/images/favicon1.ico"/>
+  <link rel="apple-touch-icon" href="http://himg2.huanqiu.com/statics/www/hq_m/dist/m_huanqiu/images/icon.png"/>
   <link rel="stylesheet" type="text/css" href="dist/css/index.css">
   <script type="text/javascript" src="http://himg2.huanqiu.com/statics/www/hq_m/dist/m_huanqiu/libs/flexble.js"></script>
   <!-- 广告加载基础代码 -->
@@ -395,7 +397,9 @@
   </div>
   <!-- /下拉刷新 -->
 
-  <!-- <div class="clear-both"></div> -->
+  <footer>
+    <div class="footer-text">正在加载数据...</div>
+  </footer>
 
   <!-- 添加主屏 -->
   <div class="add-screen-tip" id="add-screen-tip">
@@ -410,6 +414,7 @@
 
   <script type="text/javascript" src="dist/libs/zepto.min.js"></script>
   <script type="text/javascript" src="dist/js/index.js"></script>
-  </script>
+  <!-- <script src="node_modules/eruda/eruda.min.js"></script>
+  <script>eruda.init();</script> -->
 </body>
 </html>
