等待修复轮播

--- a/m_huanqiu/index.html
+++ b/m_huanqiu/index.html
@@ -83,6 +83,7 @@
           <li class="nav-item"><a href="#channel=liuxue" >留学</a></li>
           <li class="nav-item"><a href="#channel=hope" >公益</a></li>
           <li class="nav-item"><a href="#channel=city" >城市</a></li>
+          <li class="nav-item"><a href="#channel=book" >听书</a></li>
         </ul>
       </div>
     </div>
@@ -115,6 +116,7 @@
       <a href="#channel=liuxue" class="nav-item">留学</a>
       <a href="#channel=hope" class="nav-item">公益</a>
       <a href="#channel=city" class="nav-item">城市</a>
+      <a href="#channel=book" class="nav-item">听书</a>
     </div>
   </nav>
   <!-- /nav -->
@@ -398,7 +400,7 @@
   <!-- /下拉刷新 -->
 
   <footer>
-    <div class="footer-text">正在加载数据...</div>
+    <div class="footer-text" id="footer-text">正在加载数据...</div>
   </footer>
 
   <!-- 添加主屏 -->
