--- a/m_huanqiu/index.html
+++ b/m_huanqiu/index.html
@@ -5,6 +5,7 @@
   <title>手机环球网</title>
   <meta name="keywords" content="环球新闻网,新闻，环球，军事，新闻网，环球网，环球时报，娱乐，国内新闻，图片新闻网">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0 user-scalable=no">
+  <meta content="telephone=no,email=no" name="format-detection">
   <meta name="screen-orientation" content="portrait">
   <meta name="x5-orientation" content="portrait">
   <meta name="apple-mobile-web-app-title" content="手机环球网">
@@ -414,7 +415,7 @@
   <!-- 广告加载基础代码 -->
   <script type="text/javascript" src="http://ipengtai.huanqiu.com/resource/js/base_mobile2.js"></script>
   <!-- /广告加载基础代码 -->
-<!--   <script src="node_modules/eruda/eruda.min.js"></script>
-  <script>eruda.init();</script> -->
+  <script src="node_modules/eruda/eruda.min.js"></script>
+  <script>eruda.init();</script>
 </body>
 </html>
