手机环球网

--- a/m_huanqiu/index.html
+++ b/m_huanqiu/index.html
@@ -13,6 +13,9 @@
   <link rel="apple-touch-icon" href="http://himg2.huanqiu.com/statics/www/hq_m/dist/m_huanqiu/images/icon.png"/>
   <link rel="stylesheet" type="text/css" href="dist/css/index.css">
   <script type="text/javascript" src="http://himg2.huanqiu.com/statics/www/hq_m/dist/m_huanqiu/libs/flexble.js"></script>
+  <!-- 广告加载基础代码 -->
+  <script type="text/javascript" src="http://ipengtai.huanqiu.com/resource/js/base_mobile2.js"></script>
+  <!-- /广告加载基础代码 -->
 </head>
 <body>
 
@@ -118,9 +121,9 @@
   <!-- /nav -->
 
   <!-- 推荐提醒 -->
-  <div class="auto-info" id="auto-info">
+  <!-- <div class="auto-info" id="auto-info">
     <p>成功为您推荐20条新闻</p>
-  </div>
+  </div> -->
   <!-- /推荐提醒 -->
 
   <!-- 下拉刷新 -->
@@ -395,9 +398,9 @@
   </div>
   <!-- /下拉刷新 -->
 
-  <!-- <footer>
+  <footer>
     <div class="footer-text" id="footer-text">正在加载数据...</div>
-  </footer> -->
+  </footer>
 
   <!-- 添加主屏 -->
   <div class="add-screen-tip" id="add-screen-tip">
@@ -415,9 +418,6 @@
 
   <script type="text/javascript" src="dist/libs/zepto.min.js"></script>
   <script type="text/javascript" src="dist/js/index.js"></script>
-  <!-- 广告加载基础代码 -->
-  <script type="text/javascript" src="http://ipengtai.huanqiu.com/resource/js/base_mobile2.js"></script>
-  <!-- /广告加载基础代码 -->
   
 </body>
 </html>
