分离线上与测试

--- a/m_huanqiu/index.html
+++ b/m_huanqiu/index.html
@@ -412,11 +412,15 @@
     点击下方的<img src="dist/images/safari_menu.png" alt="">，然后选择“添加到主屏幕”，可在桌面创建手机环球网快捷方式。
   </div>
   <!-- /添加主屏 -->
+  <script type="text/javascript" src="dist/libs/zepto.min.js"></script>
 
   <!-- <script src="node_modules/eruda/eruda.min.js"></script>
-  <script>eruda.init();</script> -->
+  <script>eruda.init();</script>
+  <script type="text/javascript">
+    $('.eruda-dev-tools').css('display', 'block')
+    $('.eruda-dev-tools').css('opacity', '1')
+  </script> -->
 
-  <script type="text/javascript" src="dist/libs/zepto.min.js"></script>
   <script type="text/javascript" src="dist/js/index.js"></script>
   
 </body>
